# scoremanager

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.gemini/: coding-style.md  database.md  instructions.md  output.json  tech-stack.md
.github/workflows/: register-data.yml
app/: globals.css  layout.tsx  page.tsx
app/_component/: HomeSearchSection.tsx  Notice.tsx  Pickups.tsx  notice.json
app/advancedsearch/: page.tsx
app/book/[id]/: page.tsx
app/components/: ExtraForms.tsx  ExtraSearch.tsx  Footer.tsx  Header.tsx  Pagination.tsx  SearchBar.tsx
app/search/: page.tsx
app/searchbook/: page.tsx
app/searchsong/: page.tsx
components/: BookCover.tsx  ExtraForms.tsx  ExtraSearch.tsx  Footer.tsx  Header.tsx  Notice.tsx  Pagination.tsx  Pickups.tsx  SearchBar.tsx  SearchTypeFilter.tsx
docs/: SCHEMA.md  directory-structure.md  features.md  overview.md  type-safety-refactoring.md
lib/: getdataFromSupabase.ts  searchParams.ts
supabase/: __init__.py  seed.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20251212000000_initial_schema.sql  20251213000000_add_random_pickups.sql  20260126000000_add_search_function.sql
supabase/scripts/: data.txt  generate_seed_sql.py  register_actions.py
types/: supabase.ts
